[project]
name = "tc-multilog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "geopandas>=1.1.1",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]

[tool.ruff]
target-version = "py312"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
